Diseño de hacer una pregunta listo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">Exception</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_logout">LogOut</string>
     <string name="title_fragmentAsk">Ask a Question</string>
     <string name="title_fragmentMy">My Questions</string>
     <string name="title_fragmentTop">Top Questions</string>
     <string name="title_fragmentSearg">Answer Questions</string>
+    <string name="tvTitleQuestion">Title of the Question:</string>
+    <string name="tvThemeQuestion">Theme of the Question:</string>
+    <string name="cbThemeOther">Other:</string>
+    <string name="tvDescriptionQuestion">Description of the Question:</string>
+    <string name="tvAddImage">Add an image</string>
+    <string name="btPublish">Publish</string>
 </resources>
