Login con autenticacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="title_fragmentAsk">Ask a Question</string>
     <string name="title_fragmentMy">My Questions</string>
     <string name="title_fragmentTop">Top Questions</string>
-    <string name="title_fragmentSearg">Answer Questions</string>
+
+    <string name="usuario">Usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="inicio">Iniciar sesión</string>
+    <string name="cerrar">Cerrar sesión</string>
+
 </resources>
