--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Exception</string>
     <string name="action_logout">LogOut</string>
+    <string name="action_settings">Settings</string>
     <string name="title_fragmentAsk">Ask a Question</string>
     <string name="title_fragmentMy">My Questions</string>
     <string name="title_fragmentTop">Top Questions</string>
