--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_fragmentAsk">Ask a Question</string>
     <string name="title_fragmentMy">My Questions</string>
     <string name="title_fragmentTop">Top Questions</string>
-
+    <string name="facebook_app_id">194025898203461</string>
     <string name="title_fragmentSearg">Answer Questions</string>
     <string name="tvTitleQuestion">Title of the Question:</string>
     <string name="tvThemeQuestion">Theme of the Question:</string>
@@ -21,9 +21,9 @@
     <string name="btLogin">Login</string>
 
 
-    <string name="usuario">Usuario</string>
-    <string name="password">Contraseña</string>
-    <string name="inicio">Iniciar sesión</string>
+    <string name="hintUsername">Username</string>
+    <string name="hintPassword">Password</string>
+    <string name="hintEmail">Email</string>
     <string name="cerrar">Cerrar sesión</string>
 
 
